Update README, add root path, fix multiple request error

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,6 @@
 <div class="card-grid-space">
   <div class="num"><%= @count += 1 %></div>
-  <a class="card" href="<%= post_path(post) %>" style="--bg-img: url(https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/html-syntax/cover.jpg)">
+  <a class="a-card" href="<%= post_path(post) %>" style="--bg-img: url(https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/html-syntax/cover.jpg)">
     <div>
       <h1><%= post.title %></h1>
       <p><%= post.content %></p>
