--- a/app/views/posts/lazy_load_images.html.erb
+++ b/app/views/posts/lazy_load_images.html.erb
@@ -22,7 +22,7 @@
 <div class="gallery">
   <% (1..100).each do |x| %>
     <div class="card bg-dark text-white" style="box-shadow: 0 16px 20px 0 rgba(0,0,0,0.5); border-radius: 15px">
-      <img class="card-image lazy" src="/loading.gif" data-src="https://source.unsplash.com/random/<%= x %>" alt="Card Image"/>
+      <img class="card-image lazy" src="/loader.gif" data-src="https://source.unsplash.com/random/<%= x %>" alt="Card Image"/>
     </div>
   <% end %>
 </div>
