--- a/app/views/posts/load_more_button.html.erb
+++ b/app/views/posts/load_more_button.html.erb
@@ -36,7 +36,7 @@
     width: max-content;
   }
 
-  .card {
+  .a-card {
     font-family: 'Heebo';
     --bg-filter-opacity: 0.5;
     background-image: linear-gradient(rgba(0,0,0,var(--bg-filter-opacity)),rgba(0,0,0,var(--bg-filter-opacity))), var(--bg-img);
@@ -59,28 +59,28 @@
     text-decoration: none;
   }
 
-  .card:hover {
+  .a-card:hover {
     transform: rotate(0);
   }
 
-  .card h1 {
+  .a-card h1 {
     margin: 0;
     font-size: 1.5em;
     line-height: 1.2em;
   }
 
-  .card p {
+  .a-card p {
     font-size: 0.75em;
     font-family: 'Open Sans';
     margin-top: 0.5em;
     line-height: 2em;
   }
 
-  .card .tags {
+  .a-card .tags {
     display: flex;
   }
 
-  .card .tags .tag {
+  .a-card .tags .tag {
     font-size: 0.75em;
     background: rgba(255,255,255,0.5);
     border-radius: 0.3rem;
@@ -90,12 +90,12 @@
     transition: all, var(--transition-time);
   }
 
-  .card:hover .tags .tag {
+  .a-card:hover .tags .tag {
     background: var(--color);
     color: white;
   }
 
-  .card .date {
+  .a-card .date {
     position: absolute;
     top: 0;
     right: 0;
@@ -105,7 +105,7 @@
     opacity: .8;
   }
 
-  .card:before, .card:after {
+  .a-card:before, .a-card:after {
     content: '';
     transform: scale(0);
     transform-origin: top left;
@@ -118,23 +118,23 @@
     transition-timing-function: ease-in-out;
   }
 
-  .card:before {
+  .a-card:before {
     background: #ddd;
     width: 250%;
     height: 250%;
   }
 
-  .card:after {
+  .a-card:after {
     background: white;
     width: 200%;
     height: 200%;
   }
 
-  .card:hover {
+  .a-card:hover {
     color: var(--color);
   }
 
-  .card:hover:before, .card:hover:after {
+  .a-card:hover:before, .a-card:hover:after {
     transform: scale(1);
   }
 
@@ -194,7 +194,7 @@
     .cards-wrapper {
       padding: 4rem 2rem;
     }
-    .card {
+    .a-card {
       max-width: calc(100vw - 4rem);
     }
   }
