--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="<%= load_more_button_posts_path %>">Load More Button</a>
         </li>
         <li class="nav-item">
@@ -30,6 +30,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="<%= lazy_load_images_posts_path %>">Lazy Load Images</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="<%= lazy_load_images_native_posts_path %>">Lazy Load Images Natively</a>
         </li>
       </ul>
     </div>
